--- a/app/src/main/res/layout/task_cell.xml
+++ b/app/src/main/res/layout/task_cell.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
     android:layout_height="48dp">
 
     <TextView
@@ -9,4 +11,5 @@
         android:id="@+id/taskTV"
         android:gravity="center"
         />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
