--- a/app/src/main/res/layout-land/activity_todo_list.xml
+++ b/app/src/main/res/layout-land/activity_todo_list.xml
@@ -26,11 +26,46 @@
         android:text="Todo List"
         android:textSize="30sp" />
 
+    <Button
+        android:id="@+id/todo_btn"
+        android:layout_width="0dp"
+        android:layout_height="50dp"
+        app:layout_constraintTop_toBottomOf="@id/headline"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/in_progress_btn"
+        android:background="#ff0000"
+        android:text="Todo"
+        />
+
+    <Button
+        android:id="@+id/in_progress_btn"
+        android:layout_width="0dp"
+        android:layout_height="50dp"
+        app:layout_constraintTop_toBottomOf="@id/headline"
+        app:layout_constraintStart_toEndOf="@id/todo_btn"
+        app:layout_constraintEnd_toStartOf="@id/done_btn"
+        android:background="#FFEB3B"
+        android:text="In Progress"
+        />
+
+    <Button
+        android:id="@+id/done_btn"
+        android:layout_width="0dp"
+        android:layout_height="50dp"
+        app:layout_constraintTop_toBottomOf="@id/headline"
+        app:layout_constraintStart_toEndOf="@id/in_progress_btn"
+        app:layout_constraintEnd_toStartOf="@id/percent"
+        android:background="#6CC800"
+        android:text="Done"
+        />
+
+
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycle_container"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/headline"
+        app:layout_constraintTop_toBottomOf="@id/todo_btn"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@id/percent"
         app:layout_constraintHorizontal_bias="0.0"
