--- a/app/src/main/res/layout/activity_add.xml
+++ b/app/src/main/res/layout/activity_add.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".AddTodoActivity">
+    tools:context=".activitys.AddTodoActivity">
 
     <EditText
         android:id="@+id/taskET"
@@ -13,7 +13,7 @@
         android:ems="10"
         android:hint="Task"
         android:inputType="textPersonName"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_margin="32dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -26,4 +26,16 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <EditText
+        android:id="@+id/descriptionET"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:hint="Description"
+        android:layout_marginTop="150dp"
+        app:layout_constraintEnd_toEndOf="@+id/taskET"
+        app:layout_constraintStart_toStartOf="@+id/taskET"
+        app:layout_constraintTop_toBottomOf="@+id/taskET" />
 </androidx.constraintlayout.widget.ConstraintLayout>
