added functionality to filter buttons. Changed method getTodos in DataManager to getTodoList and made getTodos return a list of Todos whos progress is todo. added to TodoDao a query for a list of todos based on the progressId Column

--- a/app/src/main/res/layout-land/activity_todo_list.xml
+++ b/app/src/main/res/layout-land/activity_todo_list.xml
@@ -33,7 +33,7 @@
         app:layout_constraintTop_toBottomOf="@id/headline"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toStartOf="@id/in_progress_btn"
-        android:background="#ff0000"
+        android:background="#d01909"
         android:text="Todo"
         />
 
@@ -44,7 +44,7 @@
         app:layout_constraintTop_toBottomOf="@id/headline"
         app:layout_constraintStart_toEndOf="@id/todo_btn"
         app:layout_constraintEnd_toStartOf="@id/done_btn"
-        android:background="#FFEB3B"
+        android:background="#F3EB3B"
         android:text="In Progress"
         />
 
